--- a/app/src/main/res/layout/form1_fragment.xml
+++ b/app/src/main/res/layout/form1_fragment.xml
@@ -1,6 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
@@ -722,5 +722,18 @@
 
             </LinearLayout>
         </ScrollView>
+
     </LinearLayout>
-</FrameLayout>
+
+    <Button
+        android:id="@+id/button_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/activity_medium_margin"
+        android:background="@drawable/border_blue_1"
+        android:padding="@dimen/activity_medium_padding"
+        android:text="بعدی"
+        android:textStyle="bold" />
+</RelativeLayout>
