--- a/app/src/main/res/layout-land/map_fragment.xml
+++ b/app/src/main/res/layout-land/map_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    android:id="@+id/frameLayout"
+    android:id="@+id/relativeLayout"
     tools:context="com.leon.estimate.Fragments.Form1Fragment">
 
     <LinearLayout
