--- a/app/src/main/res/layout/form1_fragment.xml
+++ b/app/src/main/res/layout/form1_fragment.xml
@@ -239,7 +239,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editText1"
+                        android:id="@+id/editTextZoneTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -259,7 +259,7 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/editText3"
+                        android:id="@+id/editTextBillId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -272,7 +272,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText4"
+                        android:id="@+id/editTextSifoon100"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -285,7 +285,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText6"
+                        android:id="@+id/editTextSifoon150"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -298,21 +298,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText8"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_medium_margin"
-                        android:background="@drawable/border_gray_1"
-                        android:gravity="center"
-                        android:inputType="number"
-                        android:lines="1"
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-
-                    <EditText
-                        android:id="@+id/editText10"
+                        android:id="@+id/editTextArese"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -326,7 +312,21 @@
 
 
                     <EditText
-                        android:id="@+id/editText12"
+                        android:id="@+id/editTextAianMaskooni"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/activity_medium_margin"
+                        android:background="@drawable/border_gray_1"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+
+                    <EditText
+                        android:id="@+id/editTextTedadMaskooni"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -340,7 +340,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText14"
+                        android:id="@+id/editTextTedadSaier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -353,7 +353,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText16"
+                        android:id="@+id/editTextTedadTakhfif"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -375,7 +375,7 @@
                         android:gravity="center" />
 
                     <EditText
-                        android:id="@+id/editText17"
+                        android:id="@+id/editTextZarfiatQaradadi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -389,7 +389,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText18"
+                        android:id="@+id/editTextPariNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -576,7 +576,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editText2"
+                        android:id="@+id/editTextTrackNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -605,7 +605,7 @@
                         android:gravity="center" />
 
                     <EditText
-                        android:id="@+id/editText5"
+                        android:id="@+id/editTextSifoon125"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -618,7 +618,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText7"
+                        android:id="@+id/editTextSifoon200"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -632,7 +632,7 @@
 
 
                     <EditText
-                        android:id="@+id/editText9"
+                        android:id="@+id/editTextAianKol"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -645,7 +645,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText11"
+                        android:id="@+id/editTextAianNonMaskooni"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -659,7 +659,7 @@
 
 
                     <EditText
-                        android:id="@+id/editText13"
+                        android:id="@+id/editTextTedadTejari"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -669,7 +669,7 @@
                         android:inputType="number" />
 
                     <EditText
-                        android:id="@+id/editText15"
+                        android:id="@+id/editTextArzeshMelk"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
