--- a/app/src/main/res/layout-land/form1_fragment.xml
+++ b/app/src/main/res/layout-land/form1_fragment.xml
@@ -161,7 +161,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editText1"
+                        android:id="@+id/editTextZoneTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -181,7 +181,7 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/editText4"
+                        android:id="@+id/editTextSifoon100"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -194,7 +194,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText7"
+                        android:id="@+id/editTextSifoon200"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -207,7 +207,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText10"
+                        android:id="@+id/editTextAianMaskooni"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -220,7 +220,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText13"
+                        android:id="@+id/editTextTedadTejari"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -234,7 +234,7 @@
 
 
                     <EditText
-                        android:id="@+id/editText16"
+                        android:id="@+id/editTextTedadTakhfif"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -358,7 +358,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editText2"
+                        android:id="@+id/editTextTrackNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -379,7 +379,7 @@
                         android:gravity="center" />
 
                     <EditText
-                        android:id="@+id/editText5"
+                        android:id="@+id/editTextSifoon125"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -392,7 +392,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText8"
+                        android:id="@+id/editTextArese"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -405,7 +405,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText11"
+                        android:id="@+id/editTextAianNonMaskooni"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -418,7 +418,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText14"
+                        android:id="@+id/editTextTedadSaier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -546,7 +546,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editText3"
+                        android:id="@+id/editTextBillId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -564,7 +564,7 @@
                         android:gravity="center" />
 
                     <EditText
-                        android:id="@+id/editText6"
+                        android:id="@+id/editTextSifoon150"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -577,7 +577,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText9"
+                        android:id="@+id/editTextAianKol"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -587,7 +587,7 @@
                         android:inputType="number" />
 
                     <EditText
-                        android:id="@+id/editText12"
+                        android:id="@+id/editTextTedadMaskooni"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -597,7 +597,7 @@
                         android:inputType="number" />
 
                     <EditText
-                        android:id="@+id/editText15"
+                        android:id="@+id/editTextArzeshMelk"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -610,7 +610,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText17"
+                        android:id="@+id/editTextZarfiatQaradadi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
