--- a/app/src/main/res/layout-land/map_fragment.xml
+++ b/app/src/main/res/layout-land/map_fragment.xml
@@ -145,7 +145,7 @@
                             android:orientation="vertical">
 
                             <EditText
-                                android:id="@+id/editText18"
+                                android:id="@+id/editTextPariNumber"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
