--- a/app/src/main/res/layout/form1_activity.xml
+++ b/app/src/main/res/layout/form1_activity.xml
@@ -304,7 +304,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText21"
+                        android:id="@+id/editTextShenasname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -895,7 +895,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText23"
+                        android:id="@+id/editTextName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
