--- a/app/src/main/res/layout-land/map_fragment.xml
+++ b/app/src/main/res/layout-land/map_fragment.xml
@@ -172,7 +172,7 @@
                                 android:singleLine="true" />
 
                             <EditText
-                                android:id="@+id/editText24"
+                                android:id="@+id/editTextFatherName"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
@@ -334,7 +334,7 @@
                                 android:orientation="horizontal">
 
                                 <EditText
-                                    android:id="@+id/editText26"
+                                    android:id="@+id/editTextEshterak"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
