--- a/app/src/main/res/layout/form1_activity.xml
+++ b/app/src/main/res/layout/form1_activity.xml
@@ -317,7 +317,7 @@
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/editText24"
+                        android:id="@+id/editTextFatherName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -336,7 +336,7 @@
                         android:orientation="horizontal">
 
                         <EditText
-                            android:id="@+id/editText26"
+                            android:id="@+id/editTextEshterak"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
