--- a/app/src/main/res/layout-land/form1_fragment.xml
+++ b/app/src/main/res/layout-land/form1_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context="com.leon.estimate.Fragments.Form1Fragment">
+    tools:context="com.leon.estimate.Fragments.FormFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
