--- a/app/src/main/res/layout-land/map_fragment.xml
+++ b/app/src/main/res/layout-land/map_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
     android:id="@+id/relativeLayout"
-    tools:context="com.leon.estimate.Fragments.Form1Fragment">
+    tools:context="com.leon.estimate.Fragments.FormFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
