--- a/app/src/main/res/layout/form1_fragment.xml
+++ b/app/src/main/res/layout/form1_fragment.xml
@@ -181,7 +181,7 @@
                         android:layout_gravity="left"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
-                        android:text="تعداد تخفیف"
+                        android:text="@string/taxfif_number"
                         android:textColor="@color/blue4"
                         android:textSize="@dimen/textSizeLarge"
                         android:textStyle="bold" />
@@ -382,7 +382,7 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
-                        android:inputType="phone"
+                        android:inputType="number"
                         android:lines="1"
                         android:maxLength="8"
                         android:maxLines="1"
@@ -410,7 +410,7 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
-                        android:inputType="phone"
+                        android:inputType="number"
                         android:lines="1"
                         android:maxLength="8"
                         android:maxLines="1"
@@ -639,7 +639,7 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:lines="1"
                         android:maxLines="1"
                         android:singleLine="true" />
@@ -666,7 +666,11 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLength="10"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editTextArzeshMelk"
@@ -713,7 +717,7 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
-                        android:inputType="phone"
+                        android:inputType="number"
                         android:lines="1"
                         android:maxLength="8"
                         android:maxLines="1"
