--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -124,6 +124,7 @@
                                 android:textColor="@color/blue4"
                                 android:textSize="@dimen/textSizeLarge"
                                 android:textStyle="bold" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -178,9 +179,8 @@
                                 android:layout_margin="@dimen/activity_medium_margin"
                                 android:background="@drawable/border_gray_1"
                                 android:gravity="center"
-                                android:inputType="phone"
+                                android:inputType="text"
                                 android:lines="1"
-                                android:maxLength="8"
                                 android:maxLines="1"
                                 android:singleLine="true" />
 
@@ -197,20 +197,37 @@
                                 android:maxLength="8"
                                 android:maxLines="1"
                                 android:singleLine="true" />
-                            <EditText
-                                android:id="@+id/editTextPhone"
+
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_margin="@dimen/activity_medium_margin"
-                                android:background="@drawable/border_gray_1"
-                                android:gravity="center"
-                                android:inputType="number"
-                                android:lines="1"
-                                android:maxLength="10"
-                                android:maxLines="1"
-                                android:singleLine="true" />
+                                android:orientation="horizontal">
 
+                                <EditText
+                                    android:id="@+id/editTextPhone"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_margin="@dimen/activity_medium_margin"
+                                    android:layout_weight="1"
+                                    android:background="@drawable/border_gray_1"
+                                    android:gravity="center"
+                                    android:inputType="phone"
+                                    android:lines="1"
+                                    android:maxLength="9"
+                                    android:maxLines="1"
+                                    android:singleLine="true" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginStart="@dimen/activity_mid_margin"
+                                    android:layout_marginEnd="@dimen/activity_mid_margin"
+                                    android:gravity="center"
+                                    android:text="031"
+                                    android:textSize="@dimen/textSizeMedium" />
+                            </LinearLayout>
                         </LinearLayout>
 
                         <LinearLayout
@@ -261,6 +278,7 @@
                                 android:textColor="@color/blue4"
                                 android:textSize="@dimen/textSizeLarge"
                                 android:textStyle="bold" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -306,36 +324,19 @@
                                 android:maxLines="1"
                                 android:singleLine="true" />
 
-                            <LinearLayout
+                            <EditText
+                                android:id="@+id/editTextPostalCode"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <EditText
-                                    android:id="@+id/editTextPostalCode"
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:layout_margin="@dimen/activity_medium_margin"
-                                    android:layout_weight="1"
-                                    android:background="@drawable/border_gray_1"
-                                    android:gravity="center"
-                                    android:inputType="phone"
-                                    android:lines="1"
-                                    android:maxLength="9"
-                                    android:maxLines="1"
-                                    android:singleLine="true" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:layout_marginStart="@dimen/activity_mid_margin"
-                                    android:layout_marginEnd="@dimen/activity_mid_margin"
-                                    android:gravity="center"
-                                    android:text="09"
-                                    android:textSize="@dimen/textSizeMedium" />
-                            </LinearLayout>
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/activity_medium_margin"
+                                android:background="@drawable/border_gray_1"
+                                android:gravity="center"
+                                android:inputType="number"
+                                android:lines="1"
+                                android:maxLength="10"
+                                android:maxLines="1"
+                                android:singleLine="true" />
 
                             <EditText
                                 android:id="@+id/editTextRadif"
@@ -349,6 +350,7 @@
                                 android:lines="1"
                                 android:maxLines="1"
                                 android:singleLine="true" />
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
