--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -10,16 +10,18 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:weightSum="4"
         android:orientation="vertical"
         tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_large_margin"
-            android:layout_marginTop="@dimen/activity_large_margin"
-            android:layout_marginRight="@dimen/activity_large_margin"
+            android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/activity_medium_margin"
             android:gravity="center"
+            android:layout_marginRight="@dimen/activity_medium_margin"
+            android:layout_weight="1"
+            android:background="@drawable/border_gray_1"
             android:orientation="horizontal"
             tools:ignore="MissingConstraints">
 
@@ -30,23 +32,28 @@
                 android:gravity="center"
                 android:text="@string/services"
                 android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge"
+                android:textSize="@dimen/textSizeHuge"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical"
-                tools:ignore="MissingConstraints" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    tools:ignore="MissingConstraints" />
+            </ScrollView>
         </LinearLayout>
 
         <ScrollView
-
+            android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:layout_marginLeft="@dimen/activity_medium_margin"
             android:layout_marginRight="@dimen/activity_medium_margin"
             android:layout_marginBottom="@dimen/activity_mid_margin"
