--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -21,37 +21,6 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="1">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_large_margin"
-                android:layout_marginTop="@dimen/activity_large_margin"
-                android:layout_marginRight="@dimen/activity_large_margin"
-                android:gravity="center"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_large_margin"
-                    android:gravity="center"
-                    android:text="@string/services"
-                    android:textColor="@color/blue4"
-                    android:textSize="@dimen/textSizeLarge"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    tools:ignore="MissingConstraints" />
-            </LinearLayout>
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -460,6 +429,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginLeft="@dimen/activity_medium_margin"
+            android:layout_marginRight="@dimen/activity_medium_margin"
+            android:background="@drawable/border_gray_1"
             mapbox:mapbox_cameraTargetLat="40.73581"
             mapbox:mapbox_cameraTargetLng="-73.99155"
             mapbox:mapbox_cameraZoom="11" />
