--- a/app/src/main/res/layout/main_app_bar.xml
+++ b/app/src/main/res/layout/main_app_bar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main2Activity">
+    tools:context=".Activities.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -19,6 +19,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/main2_content" />
+    <include layout="@layout/main_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
