--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -112,6 +112,7 @@
                 android:layout_height="0dp"
                 android:layout_margin="@dimen/activity_mid_margin"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:orientation="vertical">
 
                 <ImageView
