--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="1">
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -161,9 +162,8 @@
                                 android:layout_margin="@dimen/activity_medium_margin"
                                 android:background="@drawable/border_gray_1"
                                 android:gravity="center"
-                                android:inputType="phone"
+                                android:inputType="number"
                                 android:lines="1"
-                                android:maxLength="8"
                                 android:maxLines="1"
                                 android:singleLine="true" />
 
@@ -428,9 +428,9 @@
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginLeft="@dimen/activity_medium_margin"
             android:layout_marginRight="@dimen/activity_medium_margin"
+            android:layout_weight="1"
             android:background="@drawable/border_gray_1"
             mapbox:mapbox_cameraTargetLat="40.73581"
             mapbox:mapbox_cameraTargetLng="-73.99155"
